cloud/modules/registry/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  namespace: namespace
  labels:
    app: registry
spec:
  containers:
    - name: registry
      image: distribution/distribution:2.8.3
      ports:
        - containerPort: 5000
        - containerPort: 5001
        - containerPort: 5002
      volumeMounts:
        - name: registry-storage
          mountPath: /var/lib/registry
        - name: registry-config
          mountPath: /etc/docker/registry
        - name: registry-secret
          mountPath: /etc/docker/registry/htpasswd
  volumes:
    - name: registry-storage
      persistentVolumeClaim:
        claimName: registry-pvc
    - name: registry-config
      configMap:
        name: registry-config
        items:
          - key: config.yml
            path: config.yml
    - name: registry-secret
      secret:
        secretName: registry-secret
